--- a/aboutUs.html
+++ b/aboutUs.html
@@ -7,8 +7,8 @@
     <title>EngConsService</title>
     <meta name='viewport' content='width=device-width, initial-scale=1 ; maximum-scale=1.0;'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='https://github.com/Filaraya/EngineeringSiteUIUX/blob/main/CSS/bootstrap.min.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='https://github.com/Filaraya/EngineeringSiteUIUX/blob/main/CSS/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/bootstrap.min.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/style.css'>
     <script type="text/javascript" src="Js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="Js/mustache.js"></script>
     <script type="text/javascript" src="Js/data.js"></script>
