--- a/location.html
+++ b/location.html
@@ -4,14 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>EngConsService</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1 ; maximum-scale=1.0;'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.min.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/Style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/bootstrap.min.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/style.css'>
     <script type="text/javascript" src="Js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="Js/mustache.js"></script>
     <script type="text/javascript" src="Js/data.js"></script>
-    
+
 </head>
 <body>
     <header>
