--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="container primary-text mt-20">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="Images/Who.jpg" class="card-img-top" alt="who we are, our sample plan">
+                    <img src="Images/who.JPG" class="card-img-top" alt="who we are, our sample plan">
                 </div>
                 <div class="col-sm-6 ">
                     <div class="row d-flex justify-content-center">
