--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
                     <input type="password" name="password" id="password"/>
                     <input type="button" value="Login" id="submit" onclick="validate()"/>
                 </form>
-            <span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : Filmon<br/>Password : filmon#123</b></span>
+            <span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : test<br/>Password : test123</b></span>
             </div>
             </div>
 
